--- a/.github/workflows/security-change.yml
+++ b/.github/workflows/security-change.yml
@@ -278,7 +278,7 @@ jobs:
             tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
             context-github: ${{ toJSON(github) }}
             job-name: 'Veracode Static Analysis'
-            security-result-attributes: '{ "scanner": "Veracode", "applicationName": "App-DevOps-Azure-POC" }'
+            security-result-attributes: '{ "scanner": "Veracode", "applicationName": "App-DevOps-Azure-POC1" }'
             
         - name: ServiceNow DevOps Change Automation
         # You may pin to the exact commit or the version.
