--- a/.github/workflows/snow-custom-tasks-workflow.yml
+++ b/.github/workflows/snow-custom-tasks-workflow.yml
@@ -103,8 +103,8 @@ jobs:
             - name: ServiceNow DevOps Sonar Scan Results
             # You may pin to the exact commit or the version.
             # uses: ServiceNow/servicenow-devops-sonar@0ed32c6471c8191f264d4bd464f14c858032354a
-              uses: ServiceNow/servicenow-devops-sonar@v1.34.2            
-            # uses: ServiceNow/servicenow-devops-sonar@main
+              uses: ServiceNow/servicenow-devops-sonar@main      
+            # uses: ServiceNow/servicenow-devops-sonar@v1.34.2
               with:
                   # ServiceNow Instance URL
                   instance-url: ${{ secrets.SN_INSTANCE_URL }}
