--- a/.github/workflows/snow-custom-tasks-workflow.yml
+++ b/.github/workflows/snow-custom-tasks-workflow.yml
@@ -272,7 +272,7 @@ jobs:
             # You may pin to the exact commit or the version.
             # uses: ServiceNow/servicenow-devops-change@0f57435999463cc1dea44bde4f5eca9879474b85
             # uses: ServiceNow/servicenow-devops-change@main            
-              uses: ServiceNow/servicenow-devops-change@v1.38.0
+              uses: ServiceNow/servicenow-devops-change@DEF0413612
               with:
                   # ServiceNow Instance URL
                   instance-url: ${{ secrets.SN_INSTANCE_URL }}
