--- a/.github/workflows/snow-custom-tasks-workflow.yml
+++ b/.github/workflows/snow-custom-tasks-workflow.yml
@@ -150,17 +150,17 @@ jobs:
                   # GitHub Custom Action
                   test-type: # optional, default is JUnit
                   
-            - name: Veracode Upload And Scan
-              uses: veracode/veracode-uploadandscan-action@0.2.6
-              with:
-                  appname: 'ServiceNow DevOps App#1'
-                  createprofile: false
-                  filepath: 'target/DevOps-Test-1.39.0-SNAPSHOT.jar'
-        #           version: ${{ github.run_id }}-${{ github.run_number }}-${{ github.run_attempt }}
-                  vid: '${{ secrets.VERACODE_API_ID }}'
-                  vkey: '${{ secrets.VERACODE_API_KEY }}'
-                  #deleteincompletescan: 1
-                  scantimeout: 20
+#             - name: Veracode Upload And Scan
+#               uses: veracode/veracode-uploadandscan-action@0.2.6
+#               with:
+#                   appname: 'ServiceNow DevOps App#1'
+#                   createprofile: false
+#                   filepath: 'target/DevOps-Test-1.39.0-SNAPSHOT.jar'
+#         #           version: ${{ github.run_id }}-${{ github.run_number }}-${{ github.run_attempt }}
+#                   vid: '${{ secrets.VERACODE_API_ID }}'
+#                   vkey: '${{ secrets.VERACODE_API_KEY }}'
+#                   #deleteincompletescan: 1
+#                   scantimeout: 20
 
             - name: ServiceNow DevOps Security Results
               uses: maheshganji/custom-action-get@sonar
