--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -65,17 +65,17 @@ jobs:
 #           # Path to SARIF file relative to the root of the repository
 #           sarif_file: veracode-results.sarif
 
-      - name: Veracode Upload And Scan
-        uses: veracode/veracode-uploadandscan-action@0.2.6
-        with:
-          appname: 'App-DevOps-Azure-POC'
-          createprofile: false
-          filepath: 'target/DevOps-Test-1.39.0-SNAPSHOT.jar'
-#           version: ${{ github.run_id }}-${{ github.run_number }}-${{ github.run_attempt }}
-          vid: '${{ secrets.VERACODE_API_ID }}'
-          vkey: '${{ secrets.VERACODE_API_KEY }}'
-          #deleteincompletescan: 1
-          scantimeout: 20
+#       - name: Veracode Upload And Scan
+#         uses: veracode/veracode-uploadandscan-action@0.2.6
+#         with:
+#           appname: 'App-DevOps-Azure-POC'
+#           createprofile: false
+#           filepath: 'target/DevOps-Test-1.39.0-SNAPSHOT.jar'
+# #           version: ${{ github.run_id }}-${{ github.run_number }}-${{ github.run_attempt }}
+#           vid: '${{ secrets.VERACODE_API_ID }}'
+#           vkey: '${{ secrets.VERACODE_API_KEY }}'
+#           #deleteincompletescan: 1
+#           scantimeout: 20
 
       - name: ServiceNow DevOps Security Results
         uses: maheshganji/custom-action-get@sonar
@@ -86,7 +86,7 @@ jobs:
           tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
           context-github: ${{ toJSON(github) }}
           job-name: 'Veracode Static Analysis'
-          security-result-attributes: '{ "scanner": "Veracode", "applicationName": "App-DevOps-Azure-POC" }'
+          security-result-attributes: '{ "scanner": "Veracode", "applicationName": "ServiceNow DevOps App#1" }'
 
   deploy:
     #if: github.event.pull_request.merged == true
@@ -94,5 +94,43 @@ jobs:
     needs: scan
     runs-on: ubuntu-latest
     steps:
+      - name: ServiceNow DevOps Change Automation
+      # You may pin to the exact commit or the version.
+      # uses: ServiceNow/servicenow-devops-change@0f57435999463cc1dea44bde4f5eca9879474b85
+      # uses: ServiceNow/servicenow-devops-change@v1.38.0            
+        uses: ServiceNow/servicenow-devops-change@dev2
+        with:
+            # ServiceNow Instance URL
+            instance-url: ${{ secrets.SN_INSTANCE_URL }}
+            # Devops Integration User Name
+            devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
+            # Devops Integration User Password
+            devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
+            # Orchestration Tool Id
+            tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
+            # Display Name of the Job
+            job-name: 'Deploy'
+            # Github Context
+            context-github: ${{ toJSON(github) }}
+            # The max. time in seconds to wait until the action should fail.
+            timeout: 3600 # optional, default is 3600
+            # The time in seconds to wait between trying the API.
+            interval: 100 # optional, default is 100
+            # The customized inputs to create change with the requested details.
+            changeCreationTimeOut: 3600
+            abortOnChangeCreationFailure: 'false'
+            abortOnChangeStepTimeout: 'false'
+            change-request: '{
+                "setCloseCode": "true",
+                "attributes": {
+                    "short_description": "Automated Software Deployment",
+                    "description": "Automated Software Deployment.",
+                    "assignment_group": "a715cd759f2002002920bde8132e7018",
+                    "implementation_plan": "Software update is tested and results can be found in Test Summaries Tab.",
+                    "backout_plan": "When software fails in production, the previous software release will be re-deployed.",
+                    "test_plan": "Testing if the software was successfully deployed"
+                }
+            }'
+
       - name: Run deployment scripts
-        run: echo Completed Deployment
+        run: echo Completed Deployment        
