--- a/.github/workflows/snow-custom-tasks-workflow.yml
+++ b/.github/workflows/snow-custom-tasks-workflow.yml
@@ -172,7 +172,7 @@ jobs:
                   tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
                   context-github: ${{ toJSON(github) }}
                   job-name: 'Test'
-                  security-result-attributes: '{ "scanner": "Veracode", "applicationName": "App-DevOps-Azure-POC", "securityToolId": "17241cffc33b2110c825371f050131f6" }'                  
+                  security-result-attributes: '{ "scanner": "Veracode", "applicationName": "ServiceNow DevOps App#1", "securityToolId": "17241cffc33b2110c825371f050131f6" }'                  
 
     integrationTest:
         #if: github.event.pull_request.merged == true
