--- a/.github/workflows/snow-custom-tasks-workflow.yml
+++ b/.github/workflows/snow-custom-tasks-workflow.yml
@@ -172,7 +172,7 @@ jobs:
                   tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
                   context-github: ${{ toJSON(github) }}
                   job-name: 'Test'
-                  security-result-attributes: '{ "scanner": "Veracode", "applicationName": "ServiceNow DevOps App#1", "securityToolId": "0e9e3fefc3b72110c825371f050131a6" }'                  
+                  security-result-attributes: '{ "scanner": ${{ secrets.SCANNER_NAME }}, "applicationName": ${{ secrets.VULNERABILITY_APPLICATION_NAME }} }'                  
 
     integrationTest:
         #if: github.event.pull_request.merged == true
