--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.java.binaries=**/*
 
 sonar.organization=pramaraju96
 sonar.projectKey=pramaraju96_DevOps-Test
-sonar.host.url=http://sonarqube1.sndevops.xyz
+sonar.host.url=http://34.229.47.174
 
 # relative paths to source directories. More details and properties are described
 # in https://docs.sonarqube.org/latest/project-administration/narrowing-the-focus/ 
