--- a/.github/workflows/snow-custom-tasks-workflow.yml
+++ b/.github/workflows/snow-custom-tasks-workflow.yml
@@ -302,8 +302,7 @@ jobs:
                           "assignment_group": "a715cd759f2002002920bde8132e7018",
                           "implementation_plan": "Software update is tested and results can be found in Test Summaries Tab.",
                           "backout_plan": "When software fails in production, the previous software release will be re-deployed.",
-                          "test_plan": "Testing if the software was successfully deployed",
-                          "chg_model": "adffaa9e4370211072b7f6be5bb8f2ed"
+                          "test_plan": "Testing if the software was successfully deployed"
                       }
                   }'
 
