--- a/.github/workflows/get-update-in-different-job-with-close.yml
+++ b/.github/workflows/get-update-in-different-job-with-close.yml
@@ -6,6 +6,8 @@ jobs:
   changeApproval:
     name: ServiceNow Change Approval
     runs-on: ubuntu-latest
+    outputs:
+      changeRequestNumber: ${{ steps.create.outputs.change-request-number }}    
     steps:     
       - name: ServiceNow Change Approval
         uses: ServiceNow/servicenow-devops-change@main
@@ -22,36 +24,36 @@ jobs:
           interval: '100'
           timeout: '3600'
 
-  custom_action_get_change:
-    needs: changeApproval
-    runs-on: ubuntu-latest
-    outputs:
-      changeRequestNumber: ${{ steps.get.outputs.change-request-number }}
-    name: GET change in custom_action_get_change job
-    steps:
-      # To use this repository's private action,
-      # you must check out the repository
-      - name: Checkout
-        uses: actions/checkout@v3
+  # custom_action_get_change:
+  #   needs: changeApproval
+  #   runs-on: ubuntu-latest
+  #   outputs:
+  #     changeRequestNumber: ${{ steps.get.outputs.change-request-number }}
+  #   name: GET change in custom_action_get_change job
+  #   steps:
+  #     # To use this repository's private action,
+  #     # you must check out the repository
+  #     - name: Checkout
+  #       uses: actions/checkout@v3
         
-      - name: ServiceNow Get Change
-        uses: ServiceNow/servicenow-devops-get-change@main   
-        # Uses an action in the root directory
-        id: get
-        with:
-          devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
-          devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
-          devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
-          instance-url: ${{ secrets.SN_INSTANCE_URL }}
-          context-github: ${{ toJSON(github) }}
-          tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
-          change-details: '{"build_number":"","pipeline_name":"","stage_name":"ServiceNow Change Approval"}' #Working Version
+  #     - name: ServiceNow Get Change
+  #       uses: ServiceNow/servicenow-devops-get-change@main   
+  #       # Uses an action in the root directory
+  #       id: get
+  #       with:
+  #         devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
+  #         devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
+  #         devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
+  #         instance-url: ${{ secrets.SN_INSTANCE_URL }}
+  #         context-github: ${{ toJSON(github) }}
+  #         tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
+  #         change-details: '{"build_number":"","pipeline_name":"","stage_name":"ServiceNow Change Approval"}' #Working Version
       
-      - name: Output of GET change
-        run: echo "change-request-number = ${{ steps.get.outputs.change-request-number }}" >> $GITHUB_OUTPUT
+  #     - name: Output of GET change
+  #       run: echo "change-request-number = ${{ steps.get.outputs.change-request-number }}" >> $GITHUB_OUTPUT
         
   custom_action_update_change:
-    needs: custom_action_get_change
+    needs: changeApproval
     runs-on: ubuntu-latest
     name: UPDATE change in custom_action_update_change job
     steps:
@@ -65,7 +67,7 @@ jobs:
         # Uses an action in the root directory
         id: update
         with:
-          change-request-number: ${{needs.custom_action_get_change.outputs.changeRequestNumber}}# Active CR
+          change-request-number: ${{needs.changeApproval.outputs.changeRequestNumber}}# Active CR
           devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
           devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
           devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
