--- a/.github/workflows/get-update-in-different-job-with-close.yml
+++ b/.github/workflows/get-update-in-different-job-with-close.yml
@@ -5,9 +5,7 @@ on:
 jobs:
   changeApproval:
     name: ServiceNow Change Approval
-    runs-on: ubuntu-latest
-    outputs:
-      changeRequestNumber: ${{ steps.create.outputs.change-request-number }}    
+    runs-on: ubuntu-latest   
     steps:     
       - name: ServiceNow Change Approval
         uses: ServiceNow/servicenow-devops-change@main
@@ -24,36 +22,36 @@ jobs:
           interval: '100'
           timeout: '3600'
 
-  # custom_action_get_change:
-  #   needs: changeApproval
-  #   runs-on: ubuntu-latest
-  #   outputs:
-  #     changeRequestNumber: ${{ steps.get.outputs.change-request-number }}
-  #   name: GET change in custom_action_get_change job
-  #   steps:
-  #     # To use this repository's private action,
-  #     # you must check out the repository
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
+  custom_action_get_change:
+    #needs: changeApproval
+    runs-on: ubuntu-latest
+    outputs:
+      changeRequestNumber: ${{ steps.get.outputs.change-request-number }}
+    name: GET change in custom_action_get_change job
+    steps:
+      # To use this repository's private action,
+      # you must check out the repository
+      - name: Checkout
+        uses: actions/checkout@v3
         
-  #     - name: ServiceNow Get Change
-  #       uses: ServiceNow/servicenow-devops-get-change@main   
-  #       # Uses an action in the root directory
-  #       id: get
-  #       with:
-  #         devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
-  #         devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
-  #         devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
-  #         instance-url: ${{ secrets.SN_INSTANCE_URL }}
-  #         context-github: ${{ toJSON(github) }}
-  #         tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
-  #         change-details: '{"build_number":"","pipeline_name":"","stage_name":"ServiceNow Change Approval"}' #Working Version
+      - name: ServiceNow Get Change
+        uses: ServiceNow/servicenow-devops-get-change@main   
+        # Uses an action in the root directory
+        id: get
+        with:
+          devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
+          devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
+          devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
+          instance-url: ${{ secrets.SN_INSTANCE_URL }}
+          context-github: ${{ toJSON(github) }}
+          tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
+          change-details: '{"build_number":"","pipeline_name":"","stage_name":"ServiceNow Change Approval"}' #Working Version
       
-  #     - name: Output of GET change
-  #       run: echo "change-request-number = ${{ steps.get.outputs.change-request-number }}" >> $GITHUB_OUTPUT
+      - name: Output of GET change
+        run: echo "change-request-number = ${{ steps.get.outputs.change-request-number }}" >> $GITHUB_OUTPUT
         
   custom_action_update_change:
-    needs: changeApproval
+    needs: custom_action_get_change
     runs-on: ubuntu-latest
     name: UPDATE change in custom_action_update_change job
     steps:
@@ -73,6 +71,7 @@ jobs:
           devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
           instance-url: ${{ secrets.SN_INSTANCE_URL }}
           context-github: ${{ toJSON(github) }}
+          tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
           change-request-details: '{ "work_notes":"Updated work_notes abcdefghijklmnopqrstuvwxyz","short_description":"Updated short_description abcdefghijklmnopqrstuvwxyz","description":"Updated description abcdefghijklmnopqrstuvwxyz"}' #Working Version
       
       - name: Output of UPDATE change
