--- a/.github/workflows/get-update-in-different-job-with-close.yml
+++ b/.github/workflows/get-update-in-different-job-with-close.yml
@@ -65,7 +65,7 @@ jobs:
         # Uses an action in the root directory
         id: update
         with:
-          change-request-number: ${{needs.changeApproval.outputs.changeRequestNumber}}# Active CR
+          change-request-number: ${{needs.custom_action_get_change.outputs.changeRequestNumber}}# Active CR
           devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
           devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
           devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
