--- a/.github/workflows/get-update-in-different-job-with-close.yml
+++ b/.github/workflows/get-update-in-different-job-with-close.yml
@@ -65,14 +65,14 @@ jobs:
         # Uses an action in the root directory
         id: update
         with:
-          change-request-number: "CHG0030070"
+          change-request-number: 'CHG0030070'
           devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
           devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
           devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
           instance-url: ${{ secrets.SN_INSTANCE_URL }}
           context-github: ${{ toJSON(github) }}
           tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
-          change-request-details: '{ "work_notes":"Updated work_notes abcdefghijklmnopqrstuvwxyz","short_description":"Updated short_description abcdefghijklmnopqrstuvwxyz","description":"Updated description abcdefghijklmnopqrstuvwxyz"}' #Working Version
+          change-request: '{ "short_description":"Updated short_description abcdefghijklmnopqrstuvwxyz"}' #Working Version
       
       - name: Output of UPDATE change
         run: echo "The Status of Update Change Request Details => ${{ steps.update.outputs.status }}"  
