--- a/.github/workflows/Julian-GHWorkflow.yml
+++ b/.github/workflows/Julian-GHWorkflow.yml
@@ -33,7 +33,7 @@ jobs:
          uses: ServiceNow/servicenow-devops-get-change@v2.0.0
          id: get
          with:
-           devops-integration-token: ${{ secrets.SN_DEVOPS_INTEGRATION_TOKEN }}
+           devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
            instance-url: ${{ secrets.SN_INSTANCE_URL }}
            tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
            context-github: ${{ toJSON(github) }}
