--- a/.github/workflows/get-update-in-different-job-with-close.yml
+++ b/.github/workflows/get-update-in-different-job-with-close.yml
@@ -51,7 +51,7 @@ jobs:
         run: echo "change-request-number = ${{ steps.get.outputs.change-request-number }}" >> $GITHUB_OUTPUT
         
   custom_action_update_change:
-    #needs: custom_action_get_change
+    needs: custom_action_get_change
     runs-on: ubuntu-latest
     name: UPDATE change in custom_action_update_change job
     steps:
@@ -65,7 +65,7 @@ jobs:
         # Uses an action in the root directory
         id: update
         with:
-          change-request-number: 'CHG0030070'
+          change-request-number: ${{needs.custom_action_get_change.outputs.changeRequestNumber}}
           devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
           devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
           devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
