--- a/.github/workflows/Julian-GHWorkflow.yml
+++ b/.github/workflows/Julian-GHWorkflow.yml
@@ -22,8 +22,8 @@ jobs:
           interval: '100'
           timeout: '3600'
   
-  post_implementation_uat:
-     name: Post Implementation UAT
+  post_implementation_uat_get:
+     name: Post Implementation UAT GET
      runs-on: ubuntu-latest
      needs: deployment_uat
      outputs:
@@ -37,14 +37,19 @@ jobs:
            instance-url: ${{ secrets.SN_INSTANCE_URL }}
            tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
            context-github: ${{ toJSON(github) }}
-           #job-name: 'Post Implementation'
+           #job-name: 'Post Implementation UAT GET'
            change-details: '{"build_number":"","pipeline_name":"","stage_name":"Prepare-UAT-Deployment"}'
-           
+   
+  post_implementation_uat_update:
+     name: Post Implementation UAT UPDATE
+     runs-on: ubuntu-latest
+     needs: post_implementation_uat_get
+     steps:       
        - name: Servicenow Update Change Details
          uses: ServiceNow/servicenow-devops-update-change@v2.0.0
          id: update
          with:
-           change-request-number: '${{needs.post_implementation_uat.outputs.changeRequestNumber}}'
+           change-request-number: '${{needs.post_implementation_uat_get.outputs.changeRequestNumber}}'
            devops-integration-token: ${{ secrets.SN_DEVOPS_INTEGRATION_TOKEN }}
            tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
            instance-url: ${{ secrets.SN_INSTANCE_URL }}
