--- a/.github/workflows/snow-custom-tasks-workflow.yml
+++ b/.github/workflows/snow-custom-tasks-workflow.yml
@@ -79,49 +79,49 @@ jobs:
                     cd target
                     ls -a
 
-            # # - name: Sonarcloud Scan
-            # #  env:
-            # #      GITHUB_TOKEN: ${{ secrets.GHP_TOKEN }}  # Needed to get PR information, if any
-            # #      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-            # #  run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=devops-test-repo
+            # - name: Sonarcloud Scan
+            #  env:
+            #      GITHUB_TOKEN: ${{ secrets.GHP_TOKEN }}  # Needed to get PR information, if any
+            #      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+            #  run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=devops-test-repo
 
-            # - name: Sonar Cloud Analysis
-            #   if: success() # always() failure() success()
-            #   run: >
-            #       mvn -B verify -DskipTests sonar:sonar
-            #       -Dsonar.projectKey=$SONAR_PROJECT_KEY
-            #       -Dsonar.organization=$SONAR_ORG_KEY
-            #       -Dsonar.host.url=$SONAR_URL
-            #       -Dsonar.login=$SONAR_TOKEN
-            #   env:
-            #       GITHUB_TOKEN: ${{ secrets.GHP_TOKEN }}
-            #       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-            #       SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
-            #       SONAR_URL: ${{ secrets.SONAR_URL }}
-            #       SONAR_ORG_KEY: ${{ secrets.SONAR_ORG_KEY }}
+            - name: Sonar Cloud Analysis
+              if: success() # always() failure() success()
+              run: >
+                  mvn -B verify -DskipTests sonar:sonar
+                  -Dsonar.projectKey=$SONAR_PROJECT_KEY
+                  -Dsonar.organization=$SONAR_ORG_KEY
+                  -Dsonar.host.url=$SONAR_URL
+                  -Dsonar.login=$SONAR_TOKEN
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GHP_TOKEN }}
+                  SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+                  SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
+                  SONAR_URL: ${{ secrets.SONAR_URL }}
+                  SONAR_ORG_KEY: ${{ secrets.SONAR_ORG_KEY }}
 
-            # - name: ServiceNow DevOps Sonar Scan Results
-            # # You may pin to the exact commit or the version.
-            # # uses: ServiceNow/servicenow-devops-sonar@0ed32c6471c8191f264d4bd464f14c858032354a
-            # # uses: ServiceNow/servicenow-devops-sonar@v1.34.2      
-            #   uses: ServiceNow/servicenow-devops-sonar@main
-            #   with:
-            #       # ServiceNow Instance URL
-            #       instance-url: ${{ secrets.SN_INSTANCE_URL }}
-            #       # Devops Integration User Name
-            #       devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
-            #       # Devops Integration User Password
-            #       devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
-            #       # Orchestration Tool Id
-            #       tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
-            #       # Github Context
-            #       context-github: ${{ toJSON(github) }}
-            #       # Display Name of the Job
-            #       job-name: 'Test'
-            #       # Sonar Host URL
-            #       sonar-host-url: ${{ secrets.SONAR_URL }}
-            #       # Sonar Project Key
-            #       sonar-project-key: ${{ secrets.SONAR_PROJECT_KEY }}
+            - name: ServiceNow DevOps Sonar Scan Results
+            # You may pin to the exact commit or the version.
+            # uses: ServiceNow/servicenow-devops-sonar@0ed32c6471c8191f264d4bd464f14c858032354a
+            # uses: ServiceNow/servicenow-devops-sonar@v1.34.2      
+              uses: ServiceNow/servicenow-devops-sonar@v2.0.0
+              with:
+                  # ServiceNow Instance URL
+                  instance-url: ${{ secrets.SN_INSTANCE_URL }}
+                  # Devops Integration User Name
+                  devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
+                  # Devops Integration User Password
+                  devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
+                  # Orchestration Tool Id
+                  tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
+                  # Github Context
+                  context-github: ${{ toJSON(github) }}
+                  # Display Name of the Job
+                  job-name: 'Test'
+                  # Sonar Host URL
+                  sonar-host-url: ${{ secrets.SONAR_URL }}
+                  # Sonar Project Key
+                  sonar-project-key: ${{ secrets.SONAR_PROJECT_KEY }}
                   
             #- name: Run JUnit Tests
             #  run: mvn test -Dmaven.test.failure.ignore=true surefire-report:report
@@ -129,7 +129,7 @@ jobs:
             - name: ServiceNow DevOps Unit Test Results
             # You may pin to the exact commit or the version.
             # uses: ServiceNow/servicenow-devops-test-report@6c7ef85f6aedfb7ab17e4d17c52c14c5f2f455fd
-              uses: ServiceNow/servicenow-devops-test-report@main
+              uses: ServiceNow/servicenow-devops-test-report@v2.0.0
             # uses: ServiceNow/servicenow-devops-test-report@v1.34.2 
               with:
                   # Devops Integration User Name
@@ -163,7 +163,7 @@ jobs:
 #                   scantimeout: 20
 
             - name: ServiceNow DevOps Security Results
-              uses: ServiceNow/servicenow-devops-security-result@main
+              uses: ServiceNow/servicenow-devops-security-result@v2.0.0
               with:
                   devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
                   devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
@@ -184,7 +184,7 @@ jobs:
             # You may pin to the exact commit or the version.
             # uses: ServiceNow/servicenow-devops-register-artifact@6312802fd9eecd4a57b13216e968b8cae4ff6fe4
             # uses: ServiceNow/servicenow-devops-register-artifact@v1.34.2            
-              uses: ServiceNow/servicenow-devops-register-artifact@main
+              uses: ServiceNow/servicenow-devops-register-artifact@v2.0.0
               with:
                   # Devops Integration User Name
                   devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
@@ -224,7 +224,7 @@ jobs:
             # You may pin to the exact commit or the version.
             # uses: ServiceNow/servicenow-devops-register-package@96a351e6f06e592011b9bdd7da5b2af26506d86b
             # uses: ServiceNow/servicenow-devops-register-package@v1.34.2            
-              uses: ServiceNow/servicenow-devops-register-package@main
+              uses: ServiceNow/servicenow-devops-register-package@v2.0.0
               with:
                   # ServiceNow Devops Integration User Name
                   devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
@@ -272,7 +272,7 @@ jobs:
             # You may pin to the exact commit or the version.
             # uses: ServiceNow/servicenow-devops-change@0f57435999463cc1dea44bde4f5eca9879474b85
             # uses: ServiceNow/servicenow-devops-change@main            
-              uses: ServiceNow/servicenow-devops-change@main
+              uses: ServiceNow/servicenow-devops-change@v2.0.0
               with:
                   # ServiceNow Instance URL
                   instance-url: ${{ secrets.SN_INSTANCE_URL }}
