--- a/.github/workflows/Julian-GHWorkflow.yml
+++ b/.github/workflows/Julian-GHWorkflow.yml
@@ -30,7 +30,7 @@ jobs:
          changeRequestNumber: ${{ steps.get.outputs.change-request-number }}
      steps:
        - name: ServiceNow Get Change
-         uses: ServiceNow/servicenow-devops-get-change@v2.0.0
+         uses: ServiceNow/servicenow-devops-get-change@scratch/test
          id: get
          with:
            devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
@@ -49,7 +49,7 @@ jobs:
      needs: post_implementation_uat_get
      steps:       
        - name: Servicenow Update Change Details
-         uses: ServiceNow/servicenow-devops-update-change@v2.0.0
+         uses: ServiceNow/servicenow-devops-update-change@scratch/test
          id: update
          with:
            change-request-number: '${{needs.post_implementation_uat_get.outputs.changeRequestNumber}}'
