--- a/.github/workflows/Julian-workflow2.yml
+++ b/.github/workflows/Julian-workflow2.yml
@@ -25,7 +25,7 @@ jobs:
   post_implementation_uat:
      name: Post Implementation UAT GET
      runs-on: ubuntu-latest
-     # needs: deployment_uat
+     needs: deployment_uat
      outputs:
          changeRequestNumber: ${{ steps.get.outputs.change-request-number }}
      steps:
