--- a/.github/workflows/Julian-workflow2.yml
+++ b/.github/workflows/Julian-workflow2.yml
@@ -25,7 +25,7 @@ jobs:
   post_implementation_uat:
      name: Post Implementation UAT GET
      runs-on: ubuntu-latest
-     #needs: deployment_uat
+     needs: deployment_uat
      outputs:
          changeRequestNumber: ${{ steps.get.outputs.change-request-number }}
      steps:
@@ -37,7 +37,6 @@ jobs:
            instance-url: ${{ secrets.SN_INSTANCE_URL }}
            tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
            context-github: ${{ toJSON(github) }}
-           #job-name: 'Post Implementation UAT GET'
            change-details: '{"build_number":"","pipeline_name":"","stage_name":"Prepare-UAT-Deployment"}'
 
        - name: Output of post_implementation_uat_get
