--- a/.github/workflows/Julian-GHWorkflow.yml
+++ b/.github/workflows/Julian-GHWorkflow.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest   
     steps:     
       - name: ServiceNow Change Approval
-        uses: ServiceNow/servicenow-devops-change@main
+        uses: ServiceNow/servicenow-devops-change@v2.0.0
         id: create
         with:
           devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
@@ -30,7 +30,7 @@ jobs:
          changeRequestNumber: ${{ steps.get.outputs.change-request-number }}
      steps:
        - name: ServiceNow Get Change
-         uses: ServiceNow/servicenow-devops-get-change@main
+         uses: ServiceNow/servicenow-devops-get-change@v2.0.0
          id: get
          with:
            devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
@@ -48,7 +48,7 @@ jobs:
      needs: post_implementation_uat_get
      steps:       
        - name: Servicenow Update Change Details
-         uses: ServiceNow/servicenow-devops-update-change@main
+         uses: ServiceNow/servicenow-devops-update-change@v2.0.0
          id: update
          with:
            change-request-number: '${{needs.post_implementation_uat_get.outputs.changeRequestNumber}}'
@@ -56,5 +56,5 @@ jobs:
            tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
            instance-url: ${{ secrets.SN_INSTANCE_URL }}
            context-github: ${{ toJSON(github) }}
-           change-request-details: '{"short_description":"Automated Software Deployment123","description":"Automated Software Deployment.123","assignment_group":"a715cd759f2002002920bde8132e7018","implementation_plan":"Software update is tested and results can be found in Test Summaries Tab; When the change is approved the implementation happens automated by the CICD pipeline within the change planned start and end time window.123","backout_plan":"When software fails in production, the previous software release will be re-deployed.123","test_plan":"Testing if the software was successfully deployed123"}'
+           change-request-details: '{"close_code":"successful", "close_notes":"Deployment to PROD was successful","state":"3"}'
 #change-request-details: '{"state":"3","close_code":"successful", "close_notes":"Deployment to PROD was successful"}'
