--- a/.github/workflows/Julian-GHWorkflow.yml
+++ b/.github/workflows/Julian-GHWorkflow.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest   
     steps:     
       - name: ServiceNow Change Approval
-        uses: ServiceNow/servicenow-devops-change@2
+        uses: ServiceNow/servicenow-devops-change@v2.0
         id: create
         with:
           devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
