--- a/.github/workflows/snow-custom-tasks-workflow.yml
+++ b/.github/workflows/snow-custom-tasks-workflow.yml
@@ -102,7 +102,7 @@ jobs:
 
             - name: ServiceNow DevOps Sonar Scan Results
             # You may pin to the exact commit or the version.     
-              uses: ServiceNow/servicenow-devops-sonar@2
+              uses: ServiceNow/servicenow-devops-sonar@v2.0.0
               with:
                   # ServiceNow Instance URL
                   instance-url: ${{ secrets.SN_INSTANCE_URL }}
@@ -126,7 +126,7 @@ jobs:
 
             - name: ServiceNow DevOps Unit Test Results
             # You may pin to the exact commit or the version.
-              uses: ServiceNow/servicenow-devops-test-report@2
+              uses: ServiceNow/servicenow-devops-test-report@v2.0.0
               with:
                   # Devops Integration User Name
                   devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
@@ -158,17 +158,17 @@ jobs:
 #                   #deleteincompletescan: 1
 #                   scantimeout: 20
 
-            - name: ServiceNow DevOps Security Results
-              uses: ServiceNow/servicenow-devops-security-result@2
-              with:
-                  devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
-                  devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
-                  #devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
-                  instance-url: ${{ secrets.SN_INSTANCE_URL }}
-                  tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
-                  context-github: ${{ toJSON(github) }}
-                  job-name: 'Test'
-                  security-result-attributes: '{ "scanner": "${{ secrets.SCANNER_NAME }}", "applicationName": "${{ secrets.VULNERABILITY_APPLICATION_NAME }}", "securityToolId": "393e9dfb9758f510bcecf5f3a253afca" }'                  
+            # - name: ServiceNow DevOps Security Results
+            #   uses: ServiceNow/servicenow-devops-security-result@v2.0.0
+            #   with:
+            #       devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
+            #       devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
+            #       #devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
+            #       instance-url: ${{ secrets.SN_INSTANCE_URL }}
+            #       tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
+            #       context-github: ${{ toJSON(github) }}
+            #       job-name: 'Test'
+            #       security-result-attributes: '{ "scanner": "${{ secrets.SCANNER_NAME }}", "applicationName": "${{ secrets.VULNERABILITY_APPLICATION_NAME }}", "securityToolId": "393e9dfb9758f510bcecf5f3a253afca" }'                  
 
     integrationTest:
         #if: github.event.pull_request.merged == true
@@ -178,7 +178,7 @@ jobs:
         steps:
             - name: ServiceNow DevOps Register Artifact
             # You may pin to the exact commit or the version.          
-              uses: ServiceNow/servicenow-devops-register-artifact@2
+              uses: ServiceNow/servicenow-devops-register-artifact@v2.0.0
               with:
                   # Devops Integration User Name
                   devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
@@ -216,7 +216,7 @@ jobs:
 
             - name: ServiceNow DevOps Register Package
             # You may pin to the exact commit or the version.           
-              uses: ServiceNow/servicenow-devops-register-package@2
+              uses: ServiceNow/servicenow-devops-register-package@v2.0.0
               with:
                   # ServiceNow Devops Integration User Name
                   devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
@@ -262,7 +262,7 @@ jobs:
         steps:     
             - name: ServiceNow DevOps Change Automation
             # You may pin to the exact commit or the version.            
-              uses: ServiceNow/servicenow-devops-change@2
+              uses: ServiceNow/servicenow-devops-change@v2.0.0
               with:
                   # ServiceNow Instance URL
                   instance-url: ${{ secrets.SN_INSTANCE_URL }}
@@ -292,8 +292,7 @@ jobs:
                           "assignment_group": "a715cd759f2002002920bde8132e7018",
                           "implementation_plan": "Software update is tested and results can be found in Test Summaries Tab.",
                           "backout_plan": "When software fails in production, the previous software release will be re-deployed.",
-                          "test_plan": "Testing if the software was successfully deployed",
-                          "type": "normal"
+                          "test_plan": "Testing if the software was successfully deployed"
                       }
                   }'
 
